Fix card element spacing across screen sizes

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -5,7 +5,7 @@
 .nft-card {
   display: flex;
   flex-direction: column;
-  padding: 1.5rem;
+  padding: 1.5rem 1.5rem clamp(1.50rem, calc(1.32rem + 0.75vw), 2.00rem) 1.5rem;
   width: 100%;
   max-width: 21.875rem;
   margin-inline: auto;
@@ -49,7 +49,7 @@
     font-weight: 600;
     font-size: 1.375rem;
     line-height: 1.75rem;
-    margin-block-end: 0.75rem;
+    margin-block-end: clamp(0.75rem, calc(0.66rem + 0.38vw), 1.00rem);
 
     &--link {
       color: colors.$light;
@@ -73,10 +73,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-block-end: 1rem;
+    margin-block-end: clamp(1.00rem, calc(0.82rem + 0.75vw), 1.50rem);
     font-weight: 400;
     font-size: 15px;
-    line-height: 19px;
+    line-height: 20px;
 
     .price,
     .time {
